<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".j.DL1MainActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/toolbar"
            android:paddingTop="15dp">

        <TextView
            android:id="@+id/string1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/string1"
            android:textSize="26sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/string2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/string2"
            android:textSize="16sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/string3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/string3"
            android:textSize="26sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="10dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:background="@drawable/button_border1"
            android:drawableStart="@drawable/ic_aadhaar"
            android:drawableEnd="@drawable/ic_three_dot"
            android:drawablePadding="12dp"
            android:text="@string/button1"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/string4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/string4"
            android:textSize="16sp"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="12dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:background="@drawable/button_border2"
            android:drawableStart="@drawable/ic_govt"
            android:drawableEnd="@drawable/ic_get"
            android:drawablePadding="12dp"
            android:text="@string/button2"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="12dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:background="@drawable/button_border2"
            android:drawableStart="@drawable/ic_govt"
            android:drawableEnd="@drawable/ic_get"
            android:drawablePadding="12dp"
            android:text="@string/button3"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:onClick="onClick"/>

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="12dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:background="@drawable/button_border2"
            android:drawableStart="@drawable/ic_govt"
            android:drawableEnd="@drawable/ic_get"
            android:drawablePadding="12dp"
            android:text="@string/button4"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/string5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/string5"
            android:textSize="26sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/aadhaar_card"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/dl"/>


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/covid"/>


        </LinearLayout>

    </LinearLayout>
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:itemBackground="@color/white"
        app:itemTextColor="@drawable/selector"
        app:itemIconTint="@drawable/selector"
        app:menu="@menu/bottom_navigation"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>

</LinearLayout>
